--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,16 @@
 [core]
   excludesfile = ~/.gitignore_global
-[diff]
-  tool = vimdiff
-[merge]
-  tool = vimdiff
 [difftool]
-  prompt = false
+  prompt = true
+[diff]
+  tool = nvimdiff
+[difftool "nvimdiff"]
+  cmd = nvim -d "$REMOTE" "$LOCAL"
+[merge]
+  tool = nvimdiff
+  conflictStyle = diff3
+[mergetool "nvimdiff"]
+  cmd = nvim -f -c "MergetoolStart" "$MERGED" "$BASE" "$LOCAL" "REMOTE"
 [pull]
   ff = only
 [push]
