--- a/.tigrc
+++ b/.tigrc
@@ -404,7 +404,7 @@ color "    Acked-by"		yellow	default
 color "    Tested-by"		yellow	default
 color "    Reviewed-by"		yellow	default
 color default			default	default	normal
-color cursor			black	white bold
+color cursor			black	152 bold
 color status			green	default
 color delimiter			magenta	default
 color date			blue	default
