--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
 [push]
   default = current
 [includeIf "gitdir:~/projects/**/.git"]
-  path = ~/Workspace/config.personal
+  path = ~/projects/config.personal
 [includeIf "gitdir:~/Workspace/**/.git"]
   path = ~/Workspace/config.ib
 [includeIf "gitdir:~/Documents/**/.git"]
