update snippets, fix issue with multiedit and pumvisible in coc

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "codeLens.enable": false,
+  "suggest.noselect": false,
   "suggest.enablePreselect": true,
   "diagnostic.messageTarget": "float",
   "diagnostic.virtualText": false,
@@ -31,11 +32,5 @@
   "elixirLS.mixEnv": "dev",
   "python.jediEnabled": false,
   "emmet.showExpandedAbbreviation": "always",
-  "emmet.includeLanguages": { "javascript": "javascriptreact" },
-  "explorer.width": 30,
-  "explorer.previewAction.onHover": false,
-  "explorer.keyMappings": {
-    "<cr>": ["expandable?", "expand", "open"]
-  },
-  "explorer.file.showHiddenFiles": true
+  "emmet.includeLanguages": { "javascript": "javascriptreact" }
 }
