add arf and frg snippets

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,6 +1,7 @@
 {
   "codeLens.enable": false,
   "suggest.noselect": false,
+  "suggest.enablePreview": true,
   "suggest.enablePreselect": true,
   "diagnostic.messageTarget": "float",
   "diagnostic.virtualText": false,
