--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind-key C-b
 
-set -g prefix C-s
-bind-key C-s send-prefix
+set -g prefix C-h
+bind-key C-h send-prefix
 
 set -g default-shell /usr/local/bin/fish
 
@@ -49,7 +49,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # split window
-bind-key \\ split-window -h -c '#{pane_current_path}'
+bind-key _ split-window -h -c '#{pane_current_path}'
 bind-key - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
