--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,9 +9,9 @@ set -g default-shell /usr/local/bin/fish
 # set -ga terminal-overrides ',alacritty:RGB'
 # set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
 
-set -g default-terminal "alacritty"
-set -ga terminal-overrides ",alacritty:Tc"
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
+set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides ",alacritty:Tc"
+# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
