change tmux prefex to M-d

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind-key C-b
 
-set -g prefix C-h
-bind-key C-h send-prefix
+set -g prefix M-d
+bind-key M-d send-prefix
 
 set -g default-shell /usr/local/bin/fish
 
