--- a/.tigrc
+++ b/.tigrc
@@ -255,9 +255,8 @@ bind status tt ?>git stash
 bind status tT @git stash push -m "%(prompt Enter stash name: )"
 
 # quick commit
-bind status c @git commit -m "%(prompt Enter commit message: )"
 bind status a !>git commit --amend --no-edit
-bind status A !>git commit --amend -m "%(prompt Enter commit message to amend: )"
+bind status A !>git commit --amend
 
 # clean
 bind status X ?>git clean -f
