remove nnn plugin
There is not much value in having 2 plugins to navigate directory, mark
and move/copy files. Fern solves most of the issues. NNN plugin is not
needed. nnn can still be used by opening a term buffer and using broot
or nnn

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,4 +22,4 @@
 [includeIf "gitdir:~/Documents/**/.git"]
 	path = ~/Documents/config.ib
 [commit]
-	template = /Users/bharat/.git_commit_msg.txt
+	template = ~/.git_commit_msg.txt
