--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -272,6 +272,8 @@ key_bindings:
   - { key: Minus,      mods: Alt|Shift,           chars: "\x1b_"         }
   - { key: J,          mods: Alt,                 chars: "\x1bj"         }
   - { key: K,          mods: Alt,                 chars: "\x1bk"         }
+  - { key: H,          mods: Alt,                 chars: "\x1bh"         }
+  - { key: L,          mods: Alt,                 chars: "\x1bl"         }
 
 #debug:
   # Display the time it takes to redraw each frame.
