bind ctrl + h/j/k/l as arrows in karabiner
It is quite difficult to bind arrows in a small keyboard. Hence setting
C+h/j/k/l as arrows systemwide in karabiner. This commit also update
many places which are using a different keybindings related to up/down.
It also removes some keybindings from karabiner which have never been
used.

--- a/.tigrc
+++ b/.tigrc
@@ -227,10 +227,6 @@ bind generic	<C-C>	quit			# Close all views and quit
 bind generic gg move-first-line
 bind generic G move-last-line
 
-# scroll right easily
-bind generic <C-H> scroll-left
-bind generic <C-L> scroll-right
-
 #  refresh
 bind generic <C-R> refresh
 
@@ -272,10 +268,8 @@ bind stash p ?>git stash pop %(stash)
 #====================
 # stage view
 #====================
-bind stage <C-J> :/^@@
-bind stage <C-K> :?^@@
-bind stage <Esc>j :/^diff --(git|cc)
-bind stage <Esc>k :?^diff --(git|cc)
+bind stage <Esc>j  :/^@@
+bind stage <Esc>k  :?^@@
 bind stage s status-update
 bind stage r status-revert
 
