Update mode color of tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,6 +59,9 @@ unbind-key Right
 unbind-key Down
 unbind-key Up
 
+# show tree and allow to switch to a specific pane
+bind-key t choose-tree
+
 # resize panes
 bind-key -r Down resize-pane -D 5
 bind-key -r Up resize-pane -U 5
@@ -159,7 +162,7 @@ set -g status-left "#[bg=${color16},fg=${color4},bold] #S "
 set -g status-style "bg=${color16}","fg=${color5},bold"
 set -g pane-border-style "fg=${color4}"
 set -g pane-active-border-style "fg=${color6}"
-set -g mode-style "fg=${color0}","bg=${color5}"
+set -g mode-style "fg=${color0}","bg=${color4}"
 set -g window-status-format "#I:#W"
 set -g window-status-separator '  '
 set -g window-status-style "bg=${color16}","fg=${color5},bold"
