add push async command to tig
push to remote in the background using pa in status view of tig

--- a/.tigrc
+++ b/.tigrc
@@ -318,6 +318,7 @@ bind refs	c	?git checkout %(branch)
 
 bind status bc @git checkout -b "%(prompt Checkout at new branch: )" %(commit)
 bind status pp ?git push %(remote) %(branch)
+bind status pa @git push %(remote) %(branch)
 bind status pF ?git push --force %(remote) %(branch)
 bind status pu !git pull
 bind status pU ?git pull --rebase
