--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -274,6 +274,7 @@ key_bindings:
   - { key: K,          mods: Alt,                 chars: "\x1bk"         }
   - { key: H,          mods: Alt,                 chars: "\x1bh"         }
   - { key: L,          mods: Alt,                 chars: "\x1bl"         }
+  - { key: S,          mods: Alt,                 chars: "\x1bs"         }
 
 #debug:
   # Display the time it takes to redraw each frame.
