add meta keys for alacritty, remap tmux prefix to M-g
M-g is much easier to press then M-s as tmux prefix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind-key C-b
 
-set -g prefix M-s
-bind-key M-s send-prefix
+set -g prefix M-g
+bind-key M-g send-prefix
 
 set -g default-shell /usr/local/bin/fish
 
