--- a/.tigrc
+++ b/.tigrc
@@ -222,6 +222,7 @@ bind generic  m none
 
 bind generic	O	maximize		# Maximize the current view
 bind generic	q	view-close		# Close the current view
+bind generic	gq	view-close			# Close all views and quit
 bind generic	Q	quit			# Close all views and quit
 bind generic	<C-C>	quit			# Close all views and quit
 bind generic gg move-first-line
