binding vim and tmux resizing to w/a/s/d
on vim resize splits with Alt-w/a/s/d and in tmux resize wiht
prefix-w/a//s/d

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -ga terminal-overrides ",alacritty:Tc"
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Enable mouse mode (tmux 2.1 and above)
-set-option -g mouse on
+set-option -g mouse off
 
 set-window-option -g mode-keys vi
 
@@ -63,10 +63,10 @@ unbind-key Up
 bind-key t choose-tree
 
 # resize panes
-bind-key -r Down resize-pane -D 5
-bind-key -r Up resize-pane -U 5
-bind-key -r Left resize-pane -L 5
-bind-key -r Right resize-pane -R 5
+bind-key -r s resize-pane -D 5
+bind-key -r w resize-pane -U 5
+bind-key -r a resize-pane -L 5
+bind-key -r d resize-pane -R 5
 
 # Vim style pane selection
 bind h select-pane -L
