change bw commands to bd

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -ga terminal-overrides ",alacritty:Tc"
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Enable mouse mode (tmux 2.1 and above)
-set-option -g mouse off
+set-option -g mouse on
 
 set-window-option -g mode-keys vi
 
