update cursorline, tmux statusbar and lightline statusbar colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -153,7 +153,7 @@ color12='#82aaff'
 color13='#c792ea'
 color14='#7fdbca'
 color15='#ffffff'
-color16='#263147'
+color16='#1a2b4a'
 
 set -g status-left "#[bg=${color16},fg=${color4},bold] #S "
 set -g status-style "bg=${color16}","fg=${color5},bold"
