--- a/.limelightrc
+++ b/.limelightrc
@@ -1,8 +1,8 @@
 #!/usr/bin/env sh
 
-limelight -m config width            2
+limelight -m config width            1
 limelight -m config radius           5
-limelight -m config placement        exterior
+limelight -m config placement        interior
 limelight -m config active_color     0xff82aaff
 limelight -m config normal_color     0xff555555
 
