update alacritty padding
enable dynamic padding to make the padding even on both sides

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -11,10 +11,10 @@ window:
   #  y: 0
 
   padding:
-    x: 4
+    x: 2
     y: 0
 
-  dynamic_padding: false
+  dynamic_padding: true
 
   decorations: buttonless
 
